<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTodayDataLabel"
        style="@style/TextViewLabel"

        android:layout_marginTop="20dp"
        android:text="@string/today_data"
        android:textColor="@color/text_black"
        android:textSize="30sp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTodayDataLabel">

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--    Today Recovered-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvRecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="@dimen/corner_border_global_today_data">

                <View
                    android:id="@+id/vRecovered"
                    style="@style/TodayDataBox"
                    android:background="@drawable/bg_global_today_data_block_green" />

                <TextView
                    android:id="@+id/tvRecoveredLabel"
                    style="@style/TextViewLabel.GlobalDataTodayCardsLabel"
                    android:text="@string/recovered" />

                <TextView
                    android:id="@+id/tvRecovered"
                    style="@style/TextViewNumber.TodayDataBoxContent"

                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeMinTextSize="20sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

            </androidx.cardview.widget.CardView>
            <!--    Today Recovered End-->


            <!--    Today Died-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvDeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/corner_border_global_today_data">

                <View
                    android:id="@+id/vDeaths"
                    style="@style/TodayDataBox"
                    android:background="@drawable/bg_global_today_data_block_red" />

                <TextView
                    android:id="@+id/tvDeathsLabel"
                    style="@style/TextViewLabel.GlobalDataTodayCardsLabel"
                    android:text="@string/deaths" />

                <TextView
                    android:id="@+id/tvDeaths"
                    style="@style/TextViewNumber.TodayDataBoxContent"

                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeMinTextSize="20sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

            </androidx.cardview.widget.CardView>
            <!--    Today Died End-->


            <!--    Today Cases-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvNewCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="@dimen/corner_border_global_today_data">

                <View
                    android:id="@+id/vNewCases"
                    style="@style/TodayDataBox"
                    android:background="@drawable/bg_global_today_data_block_orange" />

                <TextView
                    android:id="@+id/tvNewCasesLabel"
                    style="@style/TextViewLabel.GlobalDataTodayCardsLabel"
                    android:text="@string/new_cases" />

                <TextView
                    android:id="@+id/tvNewCases"
                    style="@style/TextViewNumber.TodayDataBoxContent"

                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeMinTextSize="20sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

            </androidx.cardview.widget.CardView>
            <!--    Today Cases End-->

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>